@@ -1,5 +1,11 @@
 2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Close the
+	  completion window when pressing the cursor keys with shift or control.
+	  Fixes bug #82475.
+
+2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs,
 	  MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs: Added
 	  a flag in CodeCompletionData to allow or disallow use of intrinsic type
